# booking-automation

./: .replit  DEPLOYMENT_CONFIG.md  DEPLOYMENT_DIAGNOSIS.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PACKAGE_GUIDE.md  DEPLOYMENT_READY_GUIDE.md  DEPLOYMENT_TROUBLESHOOT.md  DEPLOY_NOW.md  EMAIL_SETUP_GUIDE.md  ENHANCED_FEATURES_GUIDE.md  EXPORT_TO_RAILWAY.md  FINAL_DEPLOYMENT_SOLUTION.md  FINAL_DEPLOYMENT_STEPS.md  FRESH_DEPLOY_GUIDE.md  GITHUB_UPLOAD_DETAILED.md  QUICK_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_STEPS.md  RAILWAY_QUICK_START.md  RAILWAY_UPDATED_GUIDE.md  README.md  RENDER_DEPLOYMENT_SIMPLE.md  advanced_booking_client.py  app.py  app_simple.py  automation.py  automation_old.py  automation_preview_demo.py  booking_client.py  browser_preview.py  config.py  demo_instructions.md  email_client.py  enhanced_playwright_automation.py  example_usage.md  form_automation.py  index.py  logger_config.py  main.py  playwright_automation.py  (+8 more)
attached_assets/: calendar-invite-467920-936b1b6856fc_1754354389350.json
static/: style.css
templates/: email_config.html  enhanced_controls.html  index.html
