[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "gspread>=6.2.1",
    "gunicorn>=23.0.0",
    "oauth2client>=4.1.3",
    "playwright>=1.54.0",
    "requests>=2.32.4",
    "selenium-wire>=5.1.0",
]
